# stock-selection-script-0222

./: alpha_vantage_cfc.py  alpha_vantage_historical_cdf.py  main.py  pyproject.toml  sec_edgar_10_k_filings_downloader.py  sec_edgar_parser.py  yfinance_dcf_calculator.py  yfinance_historical_cdf.py
