[tool.poetry]
name = "stock-selection-script-0222"
version = "0.1.0"
description = ""
authors = ["Kenny Chung <kennychung.techsolution@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
yfinance = "^0.2.54"
matplotlib = "^3.10.0"
sec-edgar-downloader = "^5.0.3"
alpha-vantage = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
